Issue #14125: Fix multiprocessing refleak on Windows. Patch by sbt.